examples/compiler_errors/lab_redef.gs
str dummy0	this won't compile

dsp	dummy0
main:
jmp	main
main:
